<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ving</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="auth_button">Авторизироваться</string>
    <string name="auth_text">Настройте свой аккаунт</string>
    <string name="auth_description">Вам необходим выполнить вход через ваш аккаунт Вконтакте</string>
    <string name="title_activity_main">Ving</string>
    <string name="retry_loading">Повтор</string>
    <string name="loading_error">Проверьте подключение и\nповторите попытку</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="friends">Друзья</string>
    <string name="dialogs">Сообщения</string>
    <string name="key_id">adapter_key_id</string>

    <string name="title_activity_dialog_history">Переписка</string>
    <string name="title_activity_user">Профиль</string>
    <string name="edit_text_hint">Сообщение</string>
    <string name="header_text">Ещё</string>

    <string name="user_online">Онлайн</string>
    <string name="user_state">заходил</string>

    <string name="counter_friends">Друзья</string>
    <string name="counter_mutual_friends">Общие</string>
    <string name="counter_followers">Подписчики</string>
    <string name="counter_photos">Фото</string>
    <string name="counter_albums">Альбомы</string>
    <string name="counter_audios">Аудо</string>
    <string name="counter_videos">Видео</string>
    <string name="counter_gifts">Подарки</string>

    <string name="info_general">Информация</string>
    <string name="info_general_birthday">День рождения:</string>
    <string name="info_general_hometown">Родной город:</string>
    <string name="info_general_relation">Семейное положение:</string>
    <string name="info_general_langs">Языки:</string>

    <string name="relation_not_married_man">не женат</string>
    <string name="relation_not_married_woman">не замужем</string>
    <string name="relation_has_friend_man">есть подруга</string>
    <string name="relation_has_friend_woman">есть друг</string>
    <string name="relation_betrothed_man">помолвлен</string>
    <string name="relation_betrothed_woman">помолвлена</string>
    <string name="relation_married_man">женат</string>
    <string name="relation_married_woman">замужем</string>
    <string name="relation_complicacy">всё сложно</string>
    <string name="relation_actively_searching">в активном поиске</string>
    <string name="relation_enamored_man">влюблён</string>
    <string name="relation_enamored_woman">влюблена</string>

    <string name="info_relatives">Родственники</string>
    <string name="info_relative_brother">Брат</string>
    <string name="info_relative_sister">Сестра</string>
    <string name="info_relative_father">Отец</string>
    <string name="info_relative_mother">Мать</string>

    <string name="info_contacts">Контактная информация</string>
    <string name="info_contacts_city">Город:</string>
    <string name="info_contacts_country">Страна:</string>
    <string name="info_contacts_mobile_phone">Мобильный:</string>
    <string name="info_contacts_home_phone">Домашний:</string>
    <string name="info_contacts_skype">Skype:</string>
    <string name="info_contacts_site">Веб-сайт:</string>

    <string name="info_schools">Школы</string>
    <string name="info_universities">Университеты</string>

    <string name="info_beliefs">Жизненная позиция</string>
    <string name="info_beliefs_political">Полит. предпочтения:</string>
    <string name="info_beliefs_religion">Мировоззрение:</string>
    <string name="info_beliefs_life_main">Главное в жизни:</string>
    <string name="info_beliefs_people_main">Главное в людях:</string>
    <string name="info_beliefs_smoking">Отн. к курению:</string>
    <string name="info_beliefs_alcohol">Отн. к алкоголю:</string>
    <string name="info_beliefs_inspiration">Вдохновляют:</string>

    <string name="info_personal">Личная информация</string>
    <string name="info_personal_activity">Деятельность:</string>
    <string name="info_personal_interests">Интересы:</string>
    <string name="info_personal_music">Любимая музыка:</string>
    <string name="info_personal_movies">Любимые фильмы:</string>
    <string name="info_personal_tv">Любимые телешоу:</string>
    <string name="info_personal_books">Любимые книги:</string>
    <string name="info_personal_games">Любимые игры:</string>
    <string name="info_personal_quotes">Любимые цитаты:</string>

    <string name="info_about">О себе:</string>

    <string name="political_communist">коммунистические</string>
    <string name="political_socialist">социалистические</string>
    <string name="political_moderate">умеренные</string>
    <string name="political_liberal">либеральные</string>
    <string name="political_conservative">консервативные</string>
    <string name="political_monarchical">монархические</string>
    <string name="political_ultraconservative">ультраконсервативные</string>
    <string name="political_indifferent">индифферентные</string>
    <string name="political_libertarian">либертарианские</string>

    <string name="people_main_mind">ум и креативность</string>
    <string name="people_main_kindness">доброта и честность</string>
    <string name="people_main_beauty">красота и здоровье</string>
    <string name="people_main_power">власть и богатство</string>
    <string name="people_main_courage">смелость и упорство</string>
    <string name="people_main_humor">юмор и жизнелюбие</string>

    <string name="life_main_family">семья и дети</string>
    <string name="life_main_career">карьера и деньги</string>
    <string name="life_main_entertainment">развлечения и отдых</string>
    <string name="life_main_science">наука и исследования</string>
    <string name="life_main_world_perfection">совершенствование мира</string>
    <string name="life_main_self_development">саморазвитие</string>
    <string name="life_main_beauty">красота и искусстсво</string>
    <string name="life_main_glory">слава и влияние</string>

    <string name="harmful_habit_attitude_sharply_negative">резко негативное</string>
    <string name="harmful_habit_attitude_negative">негативное</string>
    <string name="harmful_habit_attitude_neutral">нейтральное</string>
    <string name="harmful_habit_attitude_compromise">компромиссное</string>
    <string name="harmful_habit_attitude_positive">положительное</string>

</resources>
