<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity">



    <TextView
        android:id="@+id/auth_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_text"/>

    <View
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/auth_text"
        android:background="#000000"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/auth_description"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_description"
        android:layout_below="@+id/empty_view"
        android:layout_marginTop="16dp"/>

    <Button
        android:text="@string/auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_button"
        android:layout_below="@+id/auth_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
